--- a/helloworld/alert.html
+++ b/helloworld/alert.html
@@ -1,7 +1,6 @@
 <html>
     <body>
-        <script>
-            alert("I'm JavaScript")
+        <script src="alert.js">
         </script>
     </body>
 </html>
